[doc](4.1.4) Update Chinese 4.x docs for the 4.1.4 release (#4123)
## What this PR does

Reviewed every commit between `4.1.3` and `4.1.4-rc04` (431 commits, 340
of which touch production code) and brought the **Chinese 4.x
documentation** in line with the release.

Chinese only for now, on purpose — the English pages and `dev` will be
synced after this is reviewed.

## Corrections to statements that were already wrong

| Doc said | Reality |
| --- | --- |
| `require_partition_filter` supported since 4.1.2 | Not in 4.1.2 or
4.1.3; lands in 4.1.4 |
| Multimodal `EMBED` supported since 4.1.5 | Lands in 4.1.4 |
| Paimon catalog depends on Paimon 1.0.0 | 4.1.3 shipped 1.3.1, 4.1.4
ships 1.4.2 |
| Several "since 4.0.8" notes | Only reached the 4.1 line in 4.1.4 —
`fe_meta_auth_token`, `autobucket_min_buckets`, group commit BE
forwarding, Stream Load compute group, Routine Load `FirstErrorMsg`,
`enable_file_cache_write_index_file_only` |
| `iceberg_meta()` TVF documented as available | Removed in 4.1.4 |
| `position_deletes` system table "not supported yet" | Supported since
4.1.4 |
| ANN index "only on Duplicate Key tables" | Also allowed on
merge-on-write Unique Key tables |

## New / changed user-facing surface now documented

**SQL and interfaces**
- `ADMIN COMPACT TABLET <id> WHERE TYPE=...`
- Removal of `iceberg_meta()`, the `/api/.../upload` endpoints and
`http_load_submitter_max_worker_threads`
- `SHOW CLUSTERS` / `SHOW COMPUTE GROUPS` now work in non-cloud mode,
with different columns and relaxed privileges
- New pages for `parse_to_variant()` / `try_parse_to_variant()`

**Lakehouse**
- Iceberg: VARIANT read/write, V3 `initial-default` / `write-default`
and the `DEFAULT()` expression, nested-column DDL, `ALTER TABLE ...
SET`, database property matrix, `$position_deletes`, Alibaba OSS Tables
REST catalog, mixed Parquet/ORC data files, `MERGE INTO` duplicate-match
check
- Hive: `__HIVE_DEFAULT_PARTITION__` now reads as a real NULL
- MaxCompute: `test_connection`, a